--- a/client/express/package.json
+++ b/client/express/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.16.4",
-    "helmet": "^3.16.0"
+    "helmet": "^3.16.0",
+    "http-proxy-middleware": "^0.19.1"
   }
 }
